# MNN-Study

./: README.md
apps/: README.md
apps/MnnAsrTest/: settings.gradle
apps/MnnAsrTest/app/: build.gradle
apps/MnnAsrTest/app/src/main/: AndroidManifest.xml
apps/MnnAsrTest/app/src/main/cpp/: CMakeLists.txt  asrtest_shim.cpp
apps/MnnAsrTest/app/src/main/java/com/k2fsa/sherpa/mnn/: FeatureConfig.kt  OnlineRecognizer.kt  OnlineStream.kt
apps/MnnAsrTest/app/src/main/java/com/mnn/asrtest/: AsrTestActivity.kt
apps/MnnAsrTest/app/src/main/res/layout/: activity_asr.xml
apps/MnnAsrTest/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/MnnAsrTest/gradle/wrapper/: gradle-wrapper.properties
apps/MoeAvatarPro/: README.legacy.md  README.md  app_version.gradle  build.gradle  settings.gradle
apps/MoeAvatarPro/app/: build.gradle
apps/MoeAvatarPro/app/src/main/: AndroidManifest.xml
apps/MoeAvatarPro/app/src/main/cpp/: CMakeLists.txt  moeavatar_llm_jni.cpp
apps/MoeAvatarPro/app/src/main/cpp/bertvits2/: CMakeLists.txt  bert_vits2_v23_loader.cpp  bert_vits2_v23_loader.hpp  bertvits2_jni.cpp
apps/MoeAvatarPro/app/src/main/java/com/example/bertvits2_infer_wrapper/impl/: BertVITS2FullInferImpl.kt  BertVITS2SimpleInferImpl.kt
apps/MoeAvatarPro/app/src/main/java/com/moeavatar/: LauncherActivity.kt  TtsActivity.kt
apps/MoeAvatarPro/app/src/main/java/com/moeavatar/asr/: AsrActivity.kt
apps/MoeAvatarPro/app/src/main/java/com/moeavatar/chat/: ChatAdapter.kt  LlmChatActivity.kt
apps/MoeAvatarPro/app/src/main/java/com/moeavatar/live2d/: Live2DActivity.kt  Live2DController.kt
apps/MoeAvatarPro/app/src/main/java/com/moeavatar/llm/: ChatTurn.kt  LlmBackend.kt  LlmConfig.kt  LocalLlmBackend.kt  LocalLlmBridge.kt  ModelScanner.kt  OpenAiLlmBackend.kt
apps/MoeAvatarPro/app/src/main/java/com/moeavatar/tts/: SentenceSplitter.kt  SpeechQueue.kt  TtsTextFilter.kt
apps/MoeAvatarPro/app/src/main/res/drawable/: bg_bubble_assistant.xml  bg_bubble_user.xml  bg_chat_gradient.xml  bg_input_bar.xml  ic_launcher_foreground.xml
apps/MoeAvatarPro/app/src/main/res/layout/: activity_asr.xml  activity_launcher.xml  activity_llm_chat.xml  activity_tts.xml  dialog_chat_settings.xml  item_msg_assistant.xml  item_msg_user.xml
apps/MoeAvatarPro/app/src/main/res/menu/: chat_menu.xml
apps/MoeAvatarPro/app/src/main/res/values/: strings.xml  themes.xml
apps/MoeChat/: settings.gradle
apps/MoeChat/app/: build.gradle
apps/MoeChat/app/src/main/: AndroidManifest.xml
apps/MoeChat/app/src/main/cpp/: CMakeLists.txt  moechat_jni.cpp
apps/MoeChat/app/src/main/java/com/moechat/: ChatMessage.kt  LlmBridge.kt  MainActivity.kt  MessageAdapter.kt
apps/MoeChat/app/src/main/res/drawable/: bg_avatar.xml  bg_bubble_assistant.xml  bg_bubble_user.xml  bg_input.xml  ic_launcher_background.xml
apps/MoeChat/app/src/main/res/layout/: activity_main.xml  item_message_assistant.xml  item_message_user.xml
apps/MoeChat/app/src/main/res/values/: strings.xml  themes.xml
docs/android-wsl-开发指南/: 00_总览_这套文档讲什么.md  01_Android目录结构与Demo解读.md  02_WSL环境搭建与设备连接.md  03_MNN核心库与MnnLlmChat编译部署流程.md  04_常用命令速查.md  05_国内网络踩坑与可复现Playbook.md  06_给AI的一键复现提示词.md  07_MnnLlmChat项目拆解.md  08_MoeAvatar_BertVITS2_TTS接入实录.md  09_MoeAvatarPro编译部署技能_给AI用.md  10_MoeAvatarPro项目拆解.md  11_sherpa-mnn-jni加载坑案.md  12_MnnAsrTest本轮改动与mic闪退待查.md  13_Android集成sherpa-mnn-ASR完整指南.md
